# dados_publicos_cnpj

./: makefile  pyproject.toml
.github/workflows/: ci.yml
dados_publicos_cnpj/: __main__.py
tests/unit/extract/: test_util.py
