[tool.poetry]
name = "dados-publicos-cnpj"
version = "0.1.0"
description = ""
authors = ["italojohnny <italojohnnydosanjos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.2"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "-s",
    "-x",
    "-vv",
    "--doctest-modules",
    "--cov=dados_publicos_cnpj",
    "--cov-report=term",
]

[tool.coverage.html]
directory = "coverage"
